add snakeyaml as dependency, config file, os util

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>json</artifactId>
             <version>20180813</version>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.25</version>
+        </dependency>
     </dependencies>
 
 </project>
