--- a/src/main/resources/config/game.yml
+++ b/src/main/resources/config/game.yml
@@ -1,6 +1,9 @@
 # Settings of the game
 version: 1 # do not edit this, used for migration between versions of config
 
+general:
+  log-level: DEBUG # possible values: GAME, FATAL, INFO, WARNING, DEBUG, VERBOSE, PROTOCOL
+
 # game
 game:
   render-distance: 12
