--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20180813</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
         </dependency>
         <dependency>
             <groupId>org.yaml</groupId>
@@ -56,5 +56,4 @@
             <version>29.0-jre</version>
         </dependency>
     </dependencies>
-
 </project>
