--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,10 @@
             <version>14.0.1</version>
             <type>pom</type>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.20</version>
+        </dependency>
     </dependencies>
 </project>
