Auto download mappings if mappings are not available on disk

--- a/src/main/resources/config/game.yml
+++ b/src/main/resources/config/game.yml
@@ -14,5 +14,6 @@ network:
 account:
   clientToken: "randomGenerated"
   accounts:
-
+download:
+  mappings: "https://gitlab.com/Bixilon/minosoft/-/raw/master/data/mcdata/%s.tar.gz?inline=false" # url for all mappings. Files must be called version.tar.gz (e.g. 1.12.2.tar.gz). In these files must be the blocks.json and the registries.json
 servers:
