--- a/src/main/resources/config/game.yml
+++ b/src/main/resources/config/game.yml
@@ -13,6 +13,7 @@ network:
 
 account:
   clientToken: "randomGenerated"
+  selected: null
   accounts:
 download:
   mappings: "https://gitlab.com/Bixilon/minosoft/-/raw/master/data/mcdata/%s.tar.gz?inline=false" # url for all mappings. Files must be called version.tar.gz (e.g. 1.12.2.tar.gz). In these files must be the blocks.json and the registries.json
