--- a/pom.xml
+++ b/pom.xml
@@ -114,5 +114,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.xeustechnologies</groupId>
+            <artifactId>jcl-core</artifactId>
+            <version>2.8</version>
+        </dependency>
     </dependencies>
 </project>
