--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,13 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>
+                    org.apache.maven.plugins
+                </groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>
+                    2.3
+                </version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -92,22 +98,6 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
             <version>1.20</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <version>2.3</version>
-            <type>maven-plugin</type>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-jdk14</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-nop</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.xeustechnologies</groupId>
