--- a/src/main/resources/config/config.json
+++ b/src/main/resources/config/config.json
@@ -11,7 +11,7 @@
   },
   "accounts": {
     "selected": "",
-    "client-token": "randomGenerated",
+    "client-token": "",
     "entries": {}
   },
   "servers": {
