--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,3 +2,5 @@ version: "2"         # required to adjust maintainability checks
 plugins:
   sonar-java:
     enabled: true
+    config:
+      sonar.java.source: "14"
