fix mapping downloading

--- a/src/main/resources/config/config.json
+++ b/src/main/resources/config/config.json
@@ -19,7 +19,7 @@
     "entries": {}
   },
   "download": {
-    "url": {
+    "urls": {
       "mappings": "https://gitlab.com/Bixilon/minosoft/-/raw/master/data/mcdata/%s.tar.gz?inline=false"
     }
   }
