--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,17 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~ Codename Minosoft
-  ~ Copyright (C) 2020 Moritz Zwerger
-  ~
-  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
-  ~
-  ~  This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
-  ~
-  ~  You should have received a copy of the GNU General Public License along with this program.  If not, see <https://www.gnu.org/licenses/>.
-  ~
-  ~  This software is not affiliated with Mojang AB, the original developer of Minecraft.
-  -->
+<?xml version="1.0" encoding="UTF-8"?><!--
+~ Codename Minosoft
+~ Copyright (C) 2020 Moritz Zwerger
+~
+~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+~
+~This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+~
+~You should have received a copy of the GNU General Public License along with this program.If not, see <https://www.gnu.org/licenses/>.
+~
+~This software is not affiliated with Mojang AB, the original developer of Minecraft.
+-->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.bixilon</groupId>
@@ -80,24 +77,18 @@
         <dependency>
             <groupId>dnsjava</groupId>
             <artifactId>dnsjava</artifactId>
-            <version>
-                3.3.0
-            </version>
+            <version>3.3.0</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>
-                15
-            </version>
+            <version>15</version>
             <type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>
-                15
-            </version>
+            <version>15</version>
             <type>pom</type>
         </dependency>
         <dependency>
