multi language support (en, de)

--- a/src/main/resources/config/config.json
+++ b/src/main/resources/config/config.json
@@ -1,7 +1,8 @@
 {
   "general": {
     "version": 1,
-    "log-level": "WARNING"
+    "log-level": "WARNING",
+    "language": "en_US"
   },
   "game": {
     "render-distance": 12
