check sha1 of assets (optionally), hide all other windows, when fatal error occurred

--- a/src/main/resources/config/config.json
+++ b/src/main/resources/config/config.json
@@ -23,5 +23,8 @@
     "urls": {
       "mappings": "https://gitlab.com/Bixilon/minosoft/-/raw/master/data/mcdata/%s.tar.gz?inline=false"
     }
+  },
+  "debug": {
+    "verify-assets": true
   }
 }
