--- a/pom.xml
+++ b/pom.xml
@@ -77,5 +77,10 @@
             <artifactId>jcl-core</artifactId>
             <version>2.8</version>
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 </project>
