wip: massive gui improvements
Add jfoenix (material design for javafx)
Redesign some parts to include the new changes

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <type>pom</type>
         </dependency>
         <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.10</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
             <version>1.20</version>
