--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.8.1</version>
                 <executions>
                     <execution>
                         <id>default-compile</id>
@@ -77,9 +77,10 @@
     </build>
 
     <properties>
+        <exec.mainClass>de.bixilon.minosoft.Minosoft</exec.mainClass>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
-        <exec.mainClass>de.bixilon.minosoft.Minosoft</exec.mainClass>
         <javafx.version>16-ea+5</javafx.version>
         <kotlin.version>1.4.21</kotlin.version>
     </properties>
