Text api: Real "obfuscating", config settings for text api

--- a/src/main/resources/config/config.json
+++ b/src/main/resources/config/config.json
@@ -7,6 +7,10 @@
   "game": {
     "render-distance": 12
   },
+  "chat": {
+    "colored": true,
+    "obfuscated": true
+  },
   "network": {
     "fake-network-brand": false,
     "show-lan-servers": true
