--- a/pom.xml
+++ b/pom.xml
@@ -308,5 +308,10 @@
             <artifactId>glm</artifactId>
             <version>1.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.oshi</groupId>
+            <artifactId>oshi-core</artifactId>
+            <version>5.5.0</version>
+        </dependency>
     </dependencies>
 </project>
